syntax = "proto3";

package productproto;

import "product.proto";

service ProductService {
    // Product
    rpc GetProducts(GetProductsRequest) returns (GetProductsResponse) {}
}